rust/zypp-agama/zypp-agama-sys/c-layer/include/lib.h

enum RESOLVABLE_SELECTED {
  /// resolvable won't be installed
  NOT_SELECTED,
  /// dependency solver select resolvable
  /// match TransactByValue::SOLVER
  SOLVER_SELECTED,
  /// installation proposal selects resolvable
  /// match TransactByValue::APPL_{LOW,HIGH} we do not need both, so we use just
  /// one value
  APPLICATION_SELECTED,
  /// user select resolvable for installation
  /// match TransactByValue::USER
  USER_SELECTED,
  /// explicitly removed by user
  USER_REMOVED
};
/// Representation of zypp::Pattern.
/// https://doc.opensuse.org/projects/libzypp/HEAD/classzypp_1_1Pattern.html
struct Pattern {
  const char *name;        ///< owned
  const char *category;    ///< owned
  const char *icon;        ///< owned
  const char *description; ///< owned
  const char *summary;     ///< owned
  const char *order;       ///< owned
  const char *repo_alias;  ///< owned
  enum RESOLVABLE_SELECTED selected;
};
struct Patterns {
  struct Pattern *list; ///< owned, *size* items
  unsigned size;
};