rust/zypp-agama/zypp-agama-sys/c-layer/include/repository.h

struct Repository {
  bool enabled;      ///<
  char *url;         ///< owned
  char *alias;       ///< owned
  char *userName;    ///< owned
  char *serviceName; ///< owned
};
struct RepositoryList {
  const unsigned size;
  /// dynamic array with given size
  struct Repository *repos; ///< owned, *size* items
};