rust/zypp-agama/zypp-agama-sys/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Pattern"][::std::mem::size_of::<Pattern>() - 64usize];
    ["Alignment of Pattern"][::std::mem::align_of::<Pattern>() - 8usize];
    ["Offset of field: Pattern::name"][::std::mem::offset_of!(Pattern, name) - 0usize];
    ["Offset of field: Pattern::category"][::std::mem::offset_of!(Pattern, category) - 8usize];
    ["Offset of field: Pattern::icon"][::std::mem::offset_of!(Pattern, icon) - 16usize];
    ["Offset of field: Pattern::description"]
        [::std::mem::offset_of!(Pattern, description) - 24usize];
    ["Offset of field: Pattern::summary"][::std::mem::offset_of!(Pattern, summary) - 32usize];
    ["Offset of field: Pattern::order"][::std::mem::offset_of!(Pattern, order) - 40usize];
    ["Offset of field: Pattern::repo_alias"][::std::mem::offset_of!(Pattern, repo_alias) - 48usize];
    ["Offset of field: Pattern::selected"][::std::mem::offset_of!(Pattern, selected) - 56usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Patterns {
    #[doc = "< owned, *size* items"]
    pub list: *mut Pattern,
    pub size: ::std::os::raw::c_uint,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Patterns"][::std::mem::size_of::<Patterns>() - 16usize];
    ["Alignment of Patterns"][::std::mem::align_of::<Patterns>() - 8usize];
    ["Offset of field: Patterns::list"][::std::mem::offset_of!(Patterns, list) - 0usize];
    ["Offset of field: Patterns::size"][::std::mem::offset_of!(Patterns, size) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Repository {
    #[doc = "<"]
    pub enabled: bool,
    #[doc = "< owned"]
    pub url: *mut ::std::os::raw::c_char,
    #[doc = "< owned"]
    pub alias: *mut ::std::os::raw::c_char,
    #[doc = "< owned"]
    pub userName: *mut ::std::os::raw::c_char,
    #[doc = "< owned"]
    pub serviceName: *mut ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Repository"][::std::mem::size_of::<Repository>() - 40usize];
    ["Alignment of Repository"][::std::mem::align_of::<Repository>() - 8usize];
    ["Offset of field: Repository::enabled"][::std::mem::offset_of!(Repository, enabled) - 0usize];
    ["Offset of field: Repository::url"][::std::mem::offset_of!(Repository, url) - 8usize];
    ["Offset of field: Repository::alias"][::std::mem::offset_of!(Repository, alias) - 16usize];
    ["Offset of field: Repository::userName"]
        [::std::mem::offset_of!(Repository, userName) - 24usize];
    ["Offset of field: Repository::serviceName"]
        [::std::mem::offset_of!(Repository, serviceName) - 32usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RepositoryList {
    pub size: ::std::os::raw::c_uint,
    #[doc = "< owned, *size* items"]
    pub repos: *mut Repository,
}
